sumo/tests/dfrouter/errors/detector_files/broken_detectors_file_warn/options.dfrouter
--net-file=input_messstrecke.net.xml --detector-files=input_messstrecke.det.xml --detectors-output detectors_def.det.xml --ignore-invalid-detectors

